# pl-simd

./: .gitignore  Cargo.toml  README.md  pyproject.toml  test.ipynb
pl_simd/: __init__.py
src/: lib.rs
tests/: test_basic.py
